--- a/src/pages/create-event/create-event.html
+++ b/src/pages/create-event/create-event.html
@@ -136,12 +136,19 @@
     </ion-card>
 
   </ion-card>
-  <ng-container *ngIf="event.key === 0">
+  <ng-container *ngIf="event.key == 0">
     <button ion-button block class="form-action-button" (click)="addEvent()">Post!</button>
   </ng-container>
 
-  <ng-container *ngIf="event.key !== 0">
-    <button color="warning" ion-button block class="form-action-button" (click)="updateEvent()">Update</button>
-  </ng-container>
+  <ion-row>
+    <ng-container *ngIf="event.key != 0">
+      <button color="danger" ion-button class="form-action-button-double" (click)="deleteEvent()">Delete</button>
+    </ng-container>
+    <ng-container *ngIf="event.key != 0">
+      <button color="warning" ion-button class="form-action-button-double" (click)="updateEvent()">Update</button>
+    </ng-container>
+  </ion-row>
+
+
 
 </ion-content>
