--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -1,71 +1,116 @@
 <!--
-Generated template for the UserProfilePage page.
+  Generated template for the UserProfilePage page.
 
-See http://ionicframework.com/docs/components/#navigation for more info on
-Ionic pages and navigation.
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
 -->
 <ion-header>
+
   <ion-navbar>
     <ion-title>UserProfile</ion-title>
   </ion-navbar>
+
 </ion-header>
 
+
 <ion-content padding>
+
   <ion-card *ngIf="showProfile">
+
     <ion-item>
       <ion-row>
-        <ion-avatar >
-          <img src={{users[0].img}}>
+        <ion-avatar>
+          <img src={{user.img}}>
         </ion-avatar>
 
         <button ion-button clear (click)="edit()">Edit Profile</button>
       </ion-row>
     </ion-item>
+
+
     <ion-item>
 
-      <h2 >Full Name</h2>
-      <p >{{users[0].name}}</p>
+      <h2>Full Name</h2>
+      <p>{{user.name}}</p>
+
 
     </ion-item>
+
+
+
     <ion-item>
 
-      <h2 >Company</h2>
-      <p >{{users[0].company}}</p>
+      <h2>Company</h2>
+      <p>{{user.company}}</p>
+
 
     </ion-item>
+
+
+
     <ion-item>
-      <h2 >Location</h2>
-      <p >2353, Main Street, Ann Arbor, Michigan</p>
+
+      <h2>Location</h2>
+      <p>2353, Main Street, Ann Arbor, Michigan</p>
+
+
     </ion-item>
+
+
+
+
+
     <ion-item>
-      <h2 >Bio </h2>
-      <p >{{users[0].bio}}</p>
+
+      <h2>Bio </h2>
+      <p>{{user.bio}}</p>
+
+
     </ion-item>
+
   </ion-card>
+
+
+
   <ion-card *ngIf="editProfile" class="inner-card">
     <ion-item>
       <ion-row>
-        <ion-avatar >
-          <img src={{users[0].img}}>
+        <ion-avatar>
+          <img src={{user.img}}>
         </ion-avatar>
+
         <button ion-button clear (click)="save()">Save Change</button>
       </ion-row>
     </ion-item>
+
     <ion-item>
       <ion-label color="primary" stacked>Enter Name</ion-label>
-      <ion-input [(ngModel)]="users[0].name"  type="email" placeholder="{{users[0].name}}"></ion-input>
+      <ion-input [(ngModel)]="user.name" type="email" placeholder="{{user.name}}"></ion-input>
     </ion-item>
+
+
     <ion-item>
       <ion-label color="primary" stacked>Enter Company</ion-label>
-      <ion-input [(ngModel)]="users[0].company" type="email" placeholder="{{users[0].company}}"></ion-input>
+      <ion-input [(ngModel)]="user.company" type="email" placeholder="{{user.company}}"></ion-input>
     </ion-item>
+
+
     <ion-item>
-      <h2 >Location</h2>
-      <p >2353, Main Street, Ann Arbor, Michigan</p>
+
+      <h2>Location</h2>
+      <p>2353, Main Street, Ann Arbor, Michigan</p>
+
     </ion-item>
+
+
+
     <ion-item>
       <ion-label color="primary" stacked>Enter Bio</ion-label>
-      <ion-input [(ngModel)]="users[0].bio" type="email" placeholder="{{users[0].bio}}"></ion-input>
+      <ion-input [(ngModel)]="user.bio" type="email" placeholder="{{user.bio}}"></ion-input>
     </ion-item>
+
+
   </ion-card>
+
+
 </ion-content>
