--- a/src/pages/user-list/user-list.html
+++ b/src/pages/user-list/user-list.html
@@ -60,9 +60,9 @@
         <ion-item no-padding (click)="jump()">
           <ion-thumbnail item-start>
             <div class="conversation-summary-avatar conversation-summary-avatar-group" data-number-of-thumbnails="4">
-              <div class="conversation-summary-avatar-group-member-wrapper"><img src={{users[group.userIds[0]].img}} data-user-initial="J"></div>
+              <div class="conversation-summary-avatar-group-member-wrapper"><img src={{users[group.userIds[0]-1].img}} data-user-initial="J"></div>
 
-              <div class="conversation-summary-avatar-group-member-wrapper"><img class="conversation-summary-avatar-group-member avatar--should-fall-back-to-initial" src={{users[group.userIds[1]].img}} data-user-initial="P"></div>
+              <div class="conversation-summary-avatar-group-member-wrapper"><img class="conversation-summary-avatar-group-member avatar--should-fall-back-to-initial" src={{users[group.userIds[1]-1].img}} data-user-initial="P"></div>
 
               <div class="conversation-summary-avatar-group-member-wrapper"><img class="conversation-summary-avatar-group-member avatar--should-fall-back-to-initial" src="" data-user-initial="B"></div>
 
@@ -72,7 +72,6 @@
             </ion-thumbnail>
             <h2>{{users[group.userIds[0]].name}}, {{users[group.userIds[1]].name}}</h2>
             <p>You're not turning me into a Mashed Potato.</p>
-            <ion-note item-end>5:47 am</ion-note>
           </ion-item>
         </ion-item-group>
       </ng-container>
