add login function, change all ids in data model to string, user can choose profile image

--- a/src/pages/my-events/my-events.html
+++ b/src/pages/my-events/my-events.html
@@ -221,7 +221,7 @@
 
   </div>
 
-  <ion-fab bottom right edge class="addnew" (click)=createEvent()>
+  <ion-fab bottom right edge class="addnew" (click)="createEvent()">
     <button ion-fab mini side="top">
       <ion-icon name="add"></ion-icon>
     </button>
