--- a/src/pages/my-events/my-events.html
+++ b/src/pages/my-events/my-events.html
@@ -38,7 +38,7 @@
 
         <!-- for each event happening in one day -->
         <ion-card *ngFor="let event of schedule.events | orderBy: 'start_time'">
-          <div (click)="event.host_id === myId ? todetail(event.key) : toViewdetail(event.key)">
+          <div (click)="event.host_id == myId ? todetail(event.key) : toViewdetail(event.key)">
             <!-- for text info per event -->
             <ion-item no-lines>
               <h2 class="event_title">
@@ -75,43 +75,48 @@
     <ng-container *ngSwitchCase="'host'">
       <!-- for each day there's a list -->
       <ion-list *ngFor="let schedule of schedules | orderBy: 'schedule_date'">
+
         <ng-container *ngIf="schedule.relationships.indexOf(segment) > -1 ">
+
           <ion-list-header no-lines class="list_header"> {{schedule.date | date: 'fullDate'}} </ion-list-header>
 
           <!-- for each event happening in one day -->
 
           <ion-card *ngFor="let event of schedule.events | orderBy: 'start_time'">
-            <ng-container *ngIf="checkEventRelationshipToMe(event) == segment">
-              <!-- for text info per event -->
-              <ion-item no-lines>
-                <h2 class="event_title">
-                  <ion-icon name="contact" *ngIf="checkEventRelationshipToMe(event) == 'host'" class="hostIcon"></ion-icon>
-                  {{event.title}}
-                </h2>
-                <p>{{event.start_time | date: 'shortTime'}}, {{event.restaurant.location}}</p>
-              </ion-item>
+            <div (click)="event.host_id == myId ? todetail(event.key) : toViewdetail(event.key)">
+              <ng-container *ngIf="checkEventRelationshipToMe(event) == segment">
+                <!-- for text info per event -->
+                <ion-item no-lines>
+                  <h2 class="event_title">
+                    <ion-icon name="contact" *ngIf="checkEventRelationshipToMe(event) == 'host'" class="hostIcon"></ion-icon>
+                    {{event.title}}
+                  </h2>
+                  <p>{{event.start_time | date: 'shortTime'}}, {{event.restaurant.location}}</p>
+                </ion-item>
 
-              <ion-item no-lines>
-                <ion-avatar item-start *ngFor="let participantId of event.coming_people_ids.slice(0,3)">
-                  <img src={{getUserImgById(participantId)}} class="participant_img">
-                </ion-avatar>
-                <p class="moreNum" *ngIf="event.coming_people_ids.length > 3">+{{event.coming_people_ids.length - 3}}</p>
+                <ion-item no-lines>
+                  <ion-avatar item-start *ngFor="let participantId of event.coming_people_ids.slice(0,3)">
+                    <img src={{getUserImgById(participantId)}} class="participant_img">
+                  </ion-avatar>
+                  <p class="moreNum" *ngIf="event.coming_people_ids.length > 3">+{{event.coming_people_ids.length - 3}}</p>
 
-                <ng-container *ngIf="checkEventRelationshipToMe(event) !== 'host'">
-                  <button ion-button clear small class="eventCardButton">
-                    <ion-icon name="ice-cream-outline"></ion-icon>
-                    <div>JOIN</div>
-                  </button>
+                  <ng-container *ngIf="checkEventRelationshipToMe(event) !== 'host'">
+                    <button ion-button clear small class="eventCardButton">
+                      <ion-icon name="ice-cream-outline"></ion-icon>
+                      <div>JOIN</div>
+                    </button>
 
-                  <button ion-button clear small class="eventCardButton">
-                    <ion-icon name="star-outline"></ion-icon>
-                    <div>SAVE</div>
-                  </button>
-                </ng-container>
-              </ion-item>
-            </ng-container>
+                    <button ion-button clear small class="eventCardButton">
+                      <ion-icon name="star-outline"></ion-icon>
+                      <div>SAVE</div>
+                    </button>
+                  </ng-container>
+                </ion-item>
+              </ng-container>
+            </div>
           </ion-card>
         </ng-container>
+
       </ion-list>
     </ng-container>
 
