--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -16,8 +16,9 @@
       <ion-item no-lines>
         <ion-input type="password" placeholder="Password" formControlName="password" show-hide-input></ion-input>
       </ion-item>
+       <button ion-button color="primary"   type="submit"  [disabled]="!login.valid">Log In</button>
 
-      <button ion-button block color="secondary" class="login-button" type="submit" [disabled]="!login.valid">Login</button>
+<!--       <button ion-button block color="secondary" class="login-button" type="submit" [disabled]="!login.valid">Login</button> -->
 
 
     </form>
@@ -25,6 +26,7 @@
       <ion-col no-padding width-50>
       </ion-col>
       <ion-col no-padding width-50>
+
         <button ion-button block clear class="signup-button" (click)="goToSignup()">Sign up here</button>
       </ion-col>
     </ion-row>
