--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -103,7 +103,9 @@ Ionic pages and navigation.
     </ion-item>
   </ion-card>
   <ion-item no-lines>
-    <button item-end ion-button (click)="logout()">Log out</button>
+
+     <button ion-button block clear class="signup-button" (click)="logout()">LOG OUT</button>
+  <!--   <button item-end ion-button (click)="logout()">Log out</button> -->
   </ion-item>
 
 
