working on buttons

--- a/src/pages/all-events/all-events.html
+++ b/src/pages/all-events/all-events.html
@@ -40,20 +40,23 @@
     </ion-card-content>
 
     <!-- little buttons below -->
-    <ion-row no-padding>
-      <ion-col text-right>
-        <button ion-button clear small color="danger" icon-start>
-          <ion-icon name='star-outline'></ion-icon>
-          Save
-        </button>
-      </ion-col>
-      <ion-col>
-        <button ion-button clear small color="danger" icon-start>
-          <ion-icon name='ice-cream-outline'></ion-icon>
-          Join
-        </button>
-      </ion-col>
-    </ion-row>
+    <ng-container *ngIf="checkEventRelationshipToMe(event) !== 'host'">
+      <ion-row no-padding>
+        <ion-col text-right>
+          <button ion-button clear small color="primary" class="eventCardButton" (click)="saveButtonClicked(event)">
+            <ion-icon [name]="checkEventRelationshipToMe(event) !== 'saved' ? 'star-outline' : 'star'"></ion-icon>
+            <div>SAVE</div>
+          </button>
+        </ion-col>
+        <ion-col>
+          <button ion-button clear small color="primary" class="eventCardButton" (click)="joinButtonClicked(event)">
+            <ion-icon name="ice-cream-outline" *ngIf="checkEventRelationshipToMe(event) !== 'going'"></ion-icon>
+            <ion-icon name="ice-cream" *ngIf="checkEventRelationshipToMe(event) == 'going'"></ion-icon>
+            <div>JOIN</div>
+          </button>
+        </ion-col>
+      </ion-row>
+    </ng-container>
 
   </ion-card>
 
