--- a/src/pages/my-events/my-events.html
+++ b/src/pages/my-events/my-events.html
@@ -46,10 +46,10 @@
             </ion-item>
           </div>
           <ion-item no-lines>
-            <ion-avatar item-start *ngFor="let participantId of event.coming_people_ids.slice(0,3)">
+            <ion-avatar item-start *ngFor="let participantId of event.pending_people_ids.slice(0,3)">
               <img src={{getUserImgById(participantId)}} class="participant_img">
             </ion-avatar>
-            <p class="moreNum" *ngIf="event.coming_people_ids.length > 3">+{{event.coming_people_ids.length - 3}}</p>
+            <p class="moreNum" *ngIf="event.pending_people_ids.length > 3">+{{event.pending_people_ids.length - 3}}</p>
 
             <ng-container *ngIf="checkEventRelationshipToMe(event) !== 'host'">
                 <button ion-button clear small class="eventCardButton" (click)="joinButtonClicked(event)">
@@ -91,10 +91,10 @@
                 </ion-item>
 
                 <ion-item no-lines>
-                  <ion-avatar item-start *ngFor="let participantId of event.coming_people_ids.slice(0,3)">
+                  <ion-avatar item-start *ngFor="let participantId of event.pending_people_ids.slice(0,3)">
                     <img src={{getUserImgById(participantId)}} class="participant_img">
                   </ion-avatar>
-                  <p class="moreNum" *ngIf="event.coming_people_ids.length > 3">+{{event.coming_people_ids.length - 3}}</p>
+                  <p class="moreNum" *ngIf="event.pending_people_ids.length > 3">+{{event.pending_people_ids.length - 3}}</p>
 
                 </ion-item>
               </ng-container>
@@ -125,10 +125,10 @@
               </ion-item>
 
               <ion-item no-lines>
-                <ion-avatar item-start *ngFor="let participantId of event.coming_people_ids.slice(0,3)">
+                <ion-avatar item-start *ngFor="let participantId of event.pending_people_ids.slice(0,3)">
                   <img src={{getUserImgById(participantId)}} class="participant_img">
                 </ion-avatar>
-                <p class="moreNum" *ngIf="event.coming_people_ids.length > 3">+{{event.coming_people_ids.length - 3}}</p>
+                <p class="moreNum" *ngIf="event.pending_people_ids.length > 3">+{{event.pending_people_ids.length - 3}}</p>
 
                 <ng-container *ngIf="checkEventRelationshipToMe(event) !== 'host'">
                     <button ion-button clear small class="eventCardButton" (click)="joinButtonClicked(event)">
@@ -169,10 +169,10 @@
               </ion-item>
 
               <ion-item no-lines>
-                <ion-avatar item-start *ngFor="let participantId of event.coming_people_ids.slice(0,3)">
+                <ion-avatar item-start *ngFor="let participantId of event.pending_people_ids.slice(0,3)">
                   <img src={{getUserImgById(participantId)}} class="participant_img">
                 </ion-avatar>
-                <p class="moreNum" *ngIf="event.coming_people_ids.length > 3">+{{event.coming_people_ids.length - 3}}</p>
+                <p class="moreNum" *ngIf="event.pending_people_ids.length > 3">+{{event.pending_people_ids.length - 3}}</p>
 
                 <ng-container *ngIf="checkEventRelationshipToMe(event) !== 'host'">
                     <button ion-button clear small class="eventCardButton" (click)="joinButtonClicked(event)">
