--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -107,7 +107,7 @@ Ionic pages and navigation.
   </ion-card>
   <ion-item no-lines>
 
-     <button ion-button block clear class="signup-button" (click)="logout()">LOG OUT</button>
+     <button ion-button class="signup-button" (click)="logout()">LOG OUT</button>
   <!--   <button item-end ion-button (click)="logout()">Log out</button> -->
   </ion-item>
 
